Updated for repeted commit

--- a/02_activities/assignments/assignment_1_Feb-27_2025.ipynb
+++ b/02_activities/assignments/assignment_1_Feb-27_2025.ipynb
@@ -1173,7 +1173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#adding images to the plot"
+    "#adding images to the plot #"
    ]
   }
  ],
