--- a/02_activities/assignments/assignment_1_Feb-26_2025.ipynb
+++ b/02_activities/assignments/assignment_1_Feb-26_2025.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "  #no code for this day"
+    "  #no code for Feb 26 "
    ]
   }
  ],
