--- a/02_activities/assignments/assignment_1_Feb-27_2025.ipynb
+++ b/02_activities/assignments/assignment_1_Feb-27_2025.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Feb 27 2025"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
